--- a/apps/laugh-it-up/app/global.css
+++ b/apps/laugh-it-up/app/global.css
@@ -1,16 +1,20 @@
 html {
   -webkit-text-size-adjust: 100%;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'Roboto', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  line-height: 1.5;
-  tab-size: 4;
+  line-height: 1.25;
+  font-size: 10px;
+  tab-size: 2;
   scroll-behavior: smooth;
+  background-color: #59BBA6;
 }
 body {
   font-family: inherit;
   line-height: inherit;
+  font-size: 100%;
   margin: 0;
+  background-color: #59BBA6;
 }
 h1,
 h2,
