--- a/libs/components/src/lib/Card/Card.module.css
+++ b/libs/components/src/lib/Card/Card.module.css
@@ -1,4 +1,11 @@
 .card {
+  position: relative;
+  text-align: center;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.16) 0 0.3rem 0.6rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 1rem 3rem 1rem;
+  gap: 1rem;
+  min-height: 230px;
 }
