--- a/libs/components/src/lib/Stickers/Stickers.module.css
+++ b/libs/components/src/lib/Stickers/Stickers.module.css
@@ -1,5 +1,8 @@
 .stickersSection {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .stickersImage {
