--- a/apps/laugh-it-up/app/global.css
+++ b/apps/laugh-it-up/app/global.css
@@ -125,6 +125,12 @@ p, .text-md {
   margin-top: 1rem;
 }
 
+.gap-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .form-error-message {
   color: #FA3333;
 }
