--- a/libs/components/src/lib/Button/Button.module.css
+++ b/libs/components/src/lib/Button/Button.module.css
@@ -4,6 +4,7 @@
   background-color: transparent;
   cursor: pointer;
   width: 100%;
+  padding: 0;
 }
 
 .button:disabled {
@@ -57,7 +58,6 @@
 
 .inner-button {
   font-size: 2.2rem;
-  font-family:'Roboto', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 900;
   text-align: center;
   text-shadow: rgba(180, 6, 6, 0.79) 0 0.3em 0.6rem;
