--- a/libs/components/src/lib/Card/Card.module.css
+++ b/libs/components/src/lib/Card/Card.module.css
@@ -1,3 +1,18 @@
+.cardWrapper {
+  margin-left: -1rem;
+  margin-right: -1rem;
+  padding: 0 1rem;
+}
+
+.decorationWrapper {
+  overflow: hidden;
+  height: 70px;
+  margin-left: -1rem;
+  margin-right: -1rem;
+  pointer-events: none;
+  margin-top: -45px;
+}
+
 .card {
   position: relative;
   text-align: center;
@@ -5,7 +20,21 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0 0.3rem 0.6rem;
   display: flex;
   flex-direction: column;
-  padding: 1rem 1rem 3rem 1rem;
+  padding: 1rem 2rem 3rem 2rem;
   gap: 1rem;
   min-height: 230px;
+}
+
+.decorativeCircle {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translateX(65%);
+}
+
+
+@media screen and (min-width: 790px) {
+  .decorationWrapper {
+    overflow: visible
+  }
 }
